	* Fix bug #36383: module_sys_dmail_newsletter not removed from admin review email
	* Fix bug #36388: In preview mode, the list of user groups ends with suprfluous br
	* Follow-up 11 to feature #34447: Password edit when both username and email are disabled
	* Cleanup outdated hidden field for password_again in tx_srfeuserregister_marker
	* Remove unnecessary access to secure array

2012-04-19 Stanislas Rolland  <typo3(arobas)sjbr.ca>
	* Follow-up 2 to feature #36006: Test whether extension tt_address is loaded
	* Fix typo in comment in class.tx_srfeuserregister_marker.php
	* Simplify condition in class.tx_srfeuserregister_data.php
	* Move call to clearSessionData out of tx_srfeuserregister_data
	* Restructure tx_srfeuserregister_display::getKeyAfterSave
	* Require div2007 0.9.0
	* Follow-up to bug #36165: Log warning to sysLog if localized label was not returned by div2007
	* Fix bug #36306: Attachment fails with current trunk producing fatal error in div2007
	* Fix bug #36307: Admin review E-Mail plain text rendering problem with current trunk
	* Recommend setting ['MAIL']['substituteOldMailAPI'] to '1' in the Install tool
	* Remove global declarations from tx_srfeuserregister_control, tx_srfeuserregister_control_main and tx_srfeuserregister_setfixed
	* Remove global declarations from tx_srfeuserregister_marker and tx_srfeuserregister_display

2012-04-16 Stanislas Rolland  <typo3(arobas)sjbr.ca>
	* Fix variable name in class.tx_srfeuserregister_control_main.php

2012-04-15 Stanislas Rolland  <typo3(arobas)sjbr.ca>
	* Fix bug #36165: Localization of some strings results in empty string
	* Fix bug #18108 (old bug tracker): Evaluating for white spaces with preg does not work
	* Fix bug #14453 (old bug tracker): Confirmation mail is sent to user although enableEmailConfirmation = 0
	* Add feature #36191: Move captcha markers setting and captcha evaluation to hooks

2012-04-15 Stanislas Rolland  <typo3(arobas)sjbr.ca>